5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4183/executions/1582_1559.log
== SUBMITION (2019-03-19 16:05:34) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia"
print(Ada Lovelace foi a primeira programadora da historia)
-- EXECUTION TIME:
0.219711
-- ERROR:
  File "/home/codebench/codes/1582/1559/main.py", line 2
    print(Ada Lovelace foi a primeira programadora da historia)
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:06:25) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia"
print(frase.upper())
-- EXECUTION TIME:
0.150537
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:06:35) 
-- CODE:
frase = "Ada Lovelace foi a primeira programadora da historia."
print(frase.upper())
-- EXECUTION TIME:
0.140105
-- TEST CASE 1:
---- input:
nonono
---- correct output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
---- user output:
ADA LOVELACE FOI A PRIMEIRA PROGRAMADORA DA HISTORIA.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
